--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "laravel-file-manager": "^2.5.4",
+        "sweetalert2": "^11.3.6",
         "vuex": "^3.6.2"
     }
 }
