--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "dependencies": {
         "laravel-file-manager": "^2.5.4",
         "sweetalert2": "^11.3.6",
+        "vue-upload-multiple-image": "^1.1.6",
+        "vue2-dropzone": "^3.6.0",
+        "vuejs-progress-bar": "^1.2.7",
         "vuex": "^3.6.2"
     }
 }
