--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "laravel-file-manager": "^2.5.4",
+        "laravel-vue-pagination": "^2.3.1",
         "sweetalert2": "^11.3.6",
         "vue-upload-multiple-image": "^1.1.6",
         "vue2-dropzone": "^3.6.0",
