--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ALLOWED_FILE_EXTENSION = jpg,png,jpeg,pdf,doc,docx,mkv,mp4
+ALLOWED_FILE_size = 5242880
