fixed some issue

--- a/.env.example
+++ b/.env.example
@@ -52,4 +52,4 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 ALLOWED_FILE_EXTENSION = jpg,png,jpeg,pdf,doc,docx,mkv,mp4
-ALLOWED_FILE_size = 5242880
+MAX_FILE_size = 5242880
